<resources>
    <string name="action_settings">Settings</string>
    <string name="action_informacion">Información</string>
    <string name="app_name">NRS</string>
    <string name="vacio"></string>
    <string name="title_activity_usuario_login">NRS</string>
    <string name="title_activity_usuario_formato">Valoración</string>
    <string name="title_activity_paciente_registrar">Registrar Paciente</string>
    <string name="usuario">Digite Usuario</string>
    <string name="password">Digite Password</string>
    <string name="preguntas">Preguntas</string>
    <string name="respuestas">Respuestas</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="pregunta1">¿IMC menos de 20.5?</string>
    <string name="pregunta2">¿Ha perdido peso los ultimos 3 meses?</string>
    <string name="pregunta3">¿Ha reducido su ingesta en la dieta la ultima semana?</string>
    <string name="pregunta4">¿El paciente esta gravemente enfermo?</string>
    <string name="auxiliar_medico">Nombre Auxiliar:</string>
    <string name="cedula_paciente">Cedula Paciente:</string>
    <string name="digite_cedula_paciente">Digite cedula</string>
    <string name="numero_cama">Numero de Cama:</string>
    <string name="digite_cama">Digite cama</string>
    <string name="hora_fecha">Fecha / Hora:</string>
    <string name="listado_pacientes_riesgo">Pacientes con Riesgo Nutricional</string>
    <string name="registrar_paciente">Registrar Nuevo Paciente</string>
    <string name="rp_cedula_paciente">Cedula del Paciente</string>
    <string name="rp_nombre_paciente">Nombre del Paciente</string>
    <string name="rp_apellido_paciente">Apellido del Paciente</string>
    <string name="rp_edad_paciente">Edad del Paciente</string>
    <string name="rp_cama_paciente">Numero de Cama</string>
    <string name="tv_cedula">Cedula:</string>
    <string name="tv_nombre">Nombre:</string>
    <string name="tv_apellido">Apellido:</string>
    <string name="tv_edad">Edad:</string>
    <string name="tv_cama">Cama:</string>
    <string name="title_activity_usuario_registrar">Registrar Usuario</string>
    <string name="tv_nombre_usuario">Nombre:</string>
    <string name="tv_apellido_usuario">Apellido:</string>
    <string name="tv_genero_usuario">Genero:</string>
    <string name="tv_email_usuario">Email:</string>
    <string name="tv_password">Password:</string>
    <string name="tv_confirmar_password">Confirmar Password:</string>
    <string name="et_nombre_usuario">Nombre del usuario</string>
    <string name="et_apellido_usuario">Apellido del usuario</string>
    <string name="et_email_usuario">Email del Usuario</string>
    <string name="et_password_usuario">Password</string>
    <string name="et_confirmar_password_usuario">Confirmar Password</string>
    <string name="rb_genero_femenino">Femenino</string>
    <string name="rb_genero_masculino">Masculino</string>
    <string name="b_registrar_medico">Registrar Auxiliar Medico</string>
    <string name="title_activity_pacientes_riesgo">Pacientes en Riesgo Nutricional</string>
    <string name="tv_cedula_pr">Cedula:</string>
    <string name="tv_nombre_pr">Nombre:</string>
    <string name="tv_apellido_pr">Apellido:</string>
    <string name="tv_edad_pr">Edad:</string>
    <string name="tv_cama_pr">Cama:</string>

</resources>
