<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sngapp.android.unisinu.com.nrsapp.UsuarioRegistrar"
    tools:showIn="@layout/activity_usuario_registrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/vacio"
            android:src="@drawable/ic_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_nombre_usuario" />

                <EditText
                    android:id="@+id/etNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/et_nombre_usuario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_apellido_usuario" />

                <EditText
                    android:id="@+id/etApellidoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/et_apellido_usuario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_genero_usuario" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbFemeninoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_genero_femenino" />

                    <RadioButton
                        android:id="@+id/rbMasculinoUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_genero_masculino" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_email_usuario" />

                <EditText
                    android:id="@+id/etEmailUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/et_email_usuario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_password" />

                <EditText
                    android:id="@+id/etPasswordUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/et_password_usuario" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_confirmar_password" />

                <EditText
                    android:id="@+id/etConfirmarPasswordUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/et_confirmar_password_usuario" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
