<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sngapp.android.unisinu.com.nrsapp.PacienteRegistrar"
    tools:showIn="@layout/activity_paciente_registrar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/vacio"
            android:src="@drawable/ic_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_cedula" />

                <EditText
                    android:id="@+id/etCedulaPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/rp_cedula_paciente" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_nombre" />

                <EditText
                    android:id="@+id/etNombrePaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/rp_nombre_paciente" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_apellido" />

                <EditText
                    android:id="@+id/etApellidoPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/rp_apellido_paciente" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_edad" />

                <EditText
                    android:id="@+id/etEdadPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/rp_edad_paciente" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_cama" />

                <EditText
                    android:id="@+id/etCamaPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/rp_cama_paciente" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>
